--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Talk to Myself</title>
+    <title>{{ page.title }}</title>
 </head>
 <body>
-    <script src="main.js"></script>
+    <div class="viewport">
+    {% include head.html %}
+    {{ content }}
+    {% include footer.html %}
+    {% include foot.html %}
+</div>
 </body>
 </html>
