--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,11 +7,10 @@
     <title>{{ page.title }}</title>
 </head>
 <body>
-    <div class="viewport">
     {% include head.html %}
+    {% include header.html %}
     {{ content }}
     {% include footer.html %}
     {% include foot.html %}
-</div>
 </body>
 </html>
