index change meta change

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,2 +1,6 @@
-<!-- <link rel="shortcut icon" href="../favicon.ico"> -->
+<title>Talk to Myself</title>
+<meta property="og:title" content="{{ page.title }}">
+<meta property="og:description" content=" talk to myself to keep your life recorded">
+<meta property="og:image" content="/src/images/ttms.png">
+<link rel="shortcut icon" href="../favicon.ico">
 <link rel="stylesheet" href="../src/css/style.css">
