--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,3 +1,6 @@
 <script src="../src/js/jquery/dist/jquery.min.js"></script>
 <script src="../src/js/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="../src/js/index.js"></script>
+<script>
+    AOS.init();
+  </script>
