--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,3 +4,5 @@
 <meta property="og:image" content="/src/images/ttms.png">
 <link rel="shortcut icon" href="../favicon.ico">
 <link rel="stylesheet" href="../src/css/style.css">
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
