--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -2,5 +2,7 @@
 <script src="../src/js/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 <script src="../src/js/index.js"></script>
 <script>
-    AOS.init();
+    AOS.init({
+        disable: "phone"
+    }); 
   </script>
