--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -3,6 +3,6 @@
 <script src="../src/js/index.js"></script>
 <script>
     AOS.init({
-        disable: "phone"
+        disable: "mobile"
     }); 
   </script>
